actualizar swagger y modificar funcion de guardar y editar producto
