# app/validators/product.validator.js
@@ -2,25 +2,27 @@ const Joi = require("joi");
 
 const schemas = {
   create: Joi.object({
-    handle: Joi.string().required(),
-    title: Joi.string().required(),
-    description: Joi.string().required(),
-    sku: Joi.number().required(),
-    grams: Joi.number().required(),
-    price: Joi.number().required(),
-    compare_price: Joi.number().required(),
-    bar_code: Joi.string().max(13).min(13).required(),
+    product_handle: Joi.string().required(),
+    product_title: Joi.string().required(),
+    product_description: Joi.string().required(),
+    product_sku: Joi.number().required(),
+    product_grams: Joi.number().required(),
+    product_stock: Joi.number().required(),
+    product_price: Joi.number().required(),
+    product_compare_price: Joi.number().required(),
+    product_bar_code: Joi.string().max(13).min(13).required(),
   }),
   edit: Joi.object({
-    id: Joi.number().required(),
-    handle: Joi.string().required(),
-    title: Joi.string().required(),
-    description: Joi.string().required(),
-    sku: Joi.number().required(),
-    grams: Joi.number().required(),
-    price: Joi.number().required(),
-    compare_price: Joi.number().required(),
-    bar_code: Joi.string().max(13).min(13).required(),
+    pk_product_id: Joi.number().required(),
+    product_handle: Joi.string().required(),
+    product_title: Joi.string().required(),
+    product_description: Joi.string().required(),
+    product_sku: Joi.number().required(),
+    product_grams: Joi.number().required(),
+    product_stock: Joi.number().required(),
+    product_price: Joi.number().required(),
+    product_compare_price: Joi.number().required(),
+    product_bar_code: Joi.string().max(13).min(13).required(),
   }),
 };
 
